--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,9 @@
 <resources>
     <string name="app_name">LoginAndSignUp</string>
+    <string name="textEmail">Email</string>
+    <string name="textPassword">Password</string>
+    <string name="textLogin">Login</string>
+    <string name="link">Create an account </string>
+    <string name="hintEmail">Email</string>
+    <string name="hintPassword">Password</string>
 </resources>
